# cpp-shared-library

./: CMakeLists.txt  README.md
include/: pal.h
src/: main.cpp  pal.cpp
